# GPCEmbed

./: CMakeLists.txt
docs/: log.txt
src/: CMakeLists.txt  embed.cpp
src/tests/: CMakeLists.txt  main.cpp  test1.cmake  test_build.cmake  test_command.cmake  test_nonzero.cmake
src/tests/test1/: CMakeLists.txt  main.cpp
